# isaac-toolkit

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_full.txt
.github/workflows/: mlonmcu_examples.yml  standalone_examples.yml  style.yml  test.yml
examples/fixed/: README.md
examples/fixed/crc32/: README.md  data.tar.xz
examples/fixed/riscv_ovpsimplus/: data.tar.xz
examples/mlonmcu/: README.md  SETUP.md  analyzer2.py  mlonmcu_example.sh  requirements.txt  script.sh
examples/standalone/: .gitignore  README.md  SETUP.md  common.mk  make_wrapper.sh  requirements.txt
examples/standalone/coremark/: .gitignore  Makefile  README.md  callgrind_pc.out  callgrind_pos.out  qemu_cmds.txt
examples/standalone/crypto_test/: Makefile  main.c  syndrome_notes.txt
examples/standalone/embench/: Makefile  README.md  main.c  make_wrapper.sh
examples/standalone/mceliece348864_decrypt/: main.c
examples/standalone/mceliece348864_encrypt/: Makefile  main.c  main_old.c  (+1 more)
ipynb/: TimeSummary.ipynb  TimeSummaryNew.ipynb
isaac_toolkit/: logging.py
isaac_toolkit/analysis/: __init__.py
isaac_toolkit/arch/: riscv.py
isaac_toolkit/backend/: pctrace.py
isaac_toolkit/frontend/: linker_map.py
isaac_toolkit/report/: report_mem_footprint.py  report_runtime.py  report_utils.py  sess_disk_usage.py  sess_mem_usage.py
isaac_toolkit/session/: __init__.py  artifact.py  config.py  create.py  session.py  summary.py
isaac_toolkit/utils/: benchmark_compression.py  graph_utils.py  nx_converter.py  pickle_printer.py
(+101 files in other folders)
