[tool.black]
line-length = 120

[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "isaac_toolkit"
dynamic = ["version", "dependencies"]
requires-python = ">=3.8"
license = {text = "Apache-2.0"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# [project.scripts]
# isaac_load = "isaac_toolkit.frontend.load:main"

[tool.setuptools_scm]
